--- a/src/main/resources/templates/admintop.html
+++ b/src/main/resources/templates/admintop.html
@@ -15,7 +15,7 @@
 </tr>
 <tr><td colspan=3 style="background:url('/image/bg-navbox.png'); font-size: small;text-align:center; width:999px;height:40px">
   <span style=" color:White; font-weight:bold; font-size:medium; font-family:宋体">&nbsp; &nbsp; &nbsp;
-    <a href="/admin/flowerindex"  style=" text-decoration:none;"><span style=" color:White; font-weight:bold; font-size:medium; font-family:宋体">鲜花管理</span></a>
+    <a href="/admin/movieindex"  style=" text-decoration:none;"><span style=" color:White; font-weight:bold; font-size:medium; font-family:宋体">鲜花管理</span></a>
      &nbsp; &nbsp; &nbsp;|&nbsp;&nbsp;&nbsp;
     <a href="/admin/order/orderlist?status=2"  style=" text-decoration:none;"><span style=" color:White; font-weight:bold; font-size:medium; font-family:宋体">订单管理</span></a>
      &nbsp; &nbsp; &nbsp;|&nbsp;&nbsp;&nbsp;
