--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -33,7 +33,7 @@
       <span style="color:White;"> |</span> &nbsp; &nbsp; &nbsp;
       <a href="/index" p style="text-decoration:none;"><span style=" color:White; font-weight:bold; font-size:medium; font-family:宋体"> 主页</span></a>
       &nbsp;&nbsp;&nbsp; <span style=" color:White;"> |</span> &nbsp;&nbsp;&nbsp;
-      <a href="/index/showflower"  style=" text-decoration:none;"><span style=" color:White; font-weight:bold; font-size:medium; font-family:宋体">鲜花</span></a>
+      <a href="/index/showmovie"  style=" text-decoration:none;"><span style=" color:White; font-weight:bold; font-size:medium; font-family:宋体">鲜花</span></a>
       &nbsp; &nbsp; &nbsp; <span style=" color:White;"> |</span>&nbsp;&nbsp;&nbsp;
     </td>
     </tr>
