--- a/src/main/resources/templates/bottom.html
+++ b/src/main/resources/templates/bottom.html
@@ -1,3 +1,3 @@
 <div id="footer">
-Copyright © 2016, flowersforjx.com, All Rights Reserved 粤华师备 20132003040号 粤ICP备 123456号
+Copyright © 2016, moviesforjx.com, All Rights Reserved 粤华师备 20132003040号 粤ICP备 123456号
 </div>
