--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <div id="content">
 		<div id="search_div">
 			<form method="post" action="/index">
-				<span class="input_span">商品名：<input type="text" name="fname"/></span>
+				<span class="input_span">商品名：<input type="text" name="moviename"/></span>
 				<span class="input_span">商品种类：
 				<select name="fclass">
 				<Option value="">不限</option>
@@ -24,20 +24,20 @@
 
 
 	<div id="prod_content">
-		<div th:each="flower:${flowerlist}">
+		<div th:each="movie:${movielist}">
 
 		<div class="prod_div">
-			<a th:href="'index/flowerdetail?flowerid='+${flower.flowerid}"><img th:src="@{'/picture/'+${flower.picturem}}" border="0"/>
+			<a th:href="'index/moviedetail?movieid='+${movie.movieid}"><img th:src="@{'/picture/'+${movie.picturem}}" border="0"/>
 			</a>
 
-				<div id="prod_name_div" th:text="${flower.fname}" >蓝色至爱</div>
-				<div id="prod_price_div" th:text="'￥'+${flower.yourprice}" >￥1280元</div>
+				<div id="prod_name_div" th:text="${movie.moviename}" >蓝色至爱</div>
+				<div id="prod_price_div" th:text="'导演：'+${movie.director}" >1280元</div>
 				<div>
 					<div id="gotocart_div">
-						<a th:href="'/cart/addCart?flowerid='+${flower.flowerid}">加入购物车</a></div>
+						<a th:href="'/cart/addCart?movieid='+${movie.movieid}">加入购物车</a></div>
 
 					</div>
-					<div id="say_div" th:text="${flower.sellednum}+'人购买'"></div>
+					<div id="say_div" th:text="${movie.sellednum}+'人购买'"></div>
 				</div>
 			</div>
 		</div>
@@ -46,20 +46,20 @@
 		<div style="clear: both"></div>
 			<div style="clear: both">
 				<br/><br/>
-			<span><a th:href="@{/index(pageNo=1,fname=${fname},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">首页</a></span>&nbsp;&nbsp;
+			<span><a th:href="@{/index(pageNo=1,moviename=${moviename},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">首页</a></span>&nbsp;&nbsp;
 				<span th:switch="${currentPage}">
-					<a th:case="1" th:href="@{/index(pageNo=${currentPage},fname=${fname},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">上一页</a>&nbsp;&nbsp;
-					<a  th:case="*" th:href="@{/index(pageNo=${currentPage - 1},fname=${fname},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">上一页</a>
+					<a th:case="1" th:href="@{/index(pageNo=${currentPage},moviename=${moviename},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">上一页</a>&nbsp;&nbsp;
+					<a  th:case="*" th:href="@{/index(pageNo=${currentPage - 1},moviename=${moviename},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">上一页</a>
 				</span>
 
 			<span th:if="${currentPage}==${pageCount}">
-				<a th:href="@{/index(pageNo=${pageCount},fname=${fname},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">下一页</a>&nbsp;&nbsp;
+				<a th:href="@{/index(pageNo=${pageCount},moviename=${moviename},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">下一页</a>&nbsp;&nbsp;
 			</span>
 			<span th:unless="${currentPage}==${pageCount}">
-				<a th:href="@{/index(pageNo=${currentPage + 1},fname=${fname},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">下一页</a>
+				<a th:href="@{/index(pageNo=${currentPage + 1},moviename=${moviename},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">下一页</a>
 			</span>
 
-				<span>&nbsp;&nbsp;<a th:href="@{/index(pageNo=${pageCount},fname=${fname},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">尾页</a></span>
+				<span>&nbsp;&nbsp;<a th:href="@{/index(pageNo=${pageCount},moviename=${moviename},fclass=${fclass},minprice=${minprice},maxprice=${maxprice})}">尾页</a></span>
 				<br/><br/>
 			</div>
 	</div>
