修改名称对接数据库

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
 			</a>
 
 				<div id="prod_name_div" th:text="${movie.moviename}" >蓝色至爱</div>
-				<div id="prod_price_div" th:text="'导演：'+${movie.director}" >1280元</div>
+				<div id="prod_price_div" th:text="'评分：'+${movie.rating}" >8.8</div>
 				<div>
 					<div id="gotocart_div">
 						<a th:href="'/cart/addCart?movieid='+${movie.movieid}">加入购物车</a></div>
