--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,8 +15,8 @@
   <form>
     <table>
       <tr>
-        <td class="tdx">Email：</td>
-        <td><input type="text" id="username" name="email" value="a@163.com"/>
+        <td class="tdx">Username：</td>
+        <td><input type="text" id="username" name="username" value="a@163.com"/>
           <span style="color:red"></span>
         </td>
       </tr>
