--- a/src/main/resources/templates/movieadd.html
+++ b/src/main/resources/templates/movieadd.html
@@ -37,7 +37,7 @@
    </td>  
    </tr>
     <tr>
-   <td style="text-align:right"><font size=2>主材料：</font></td>   
+   <td style="text-align:right"><font size=2>主主演：</font></td>
    <td><Select name="region" >
                      <Option value="玫瑰">玫瑰
                      <Option value="康乃馨">康乃馨
@@ -51,12 +51,12 @@
    </td>  
    </tr>
    <tr>
-   <td style="text-align:right"><font size=2>材料：</font></td>   
+   <td style="text-align:right"><font size=2>主演：</font></td>
    <td><TextArea name="staring" Rows="2" Cols="40"></TextArea></td>
    </tr>
    <tr>
    <td style="text-align:right"><font size=2>包装：</font></td>   
-   <td><TextArea name="baozhuang" Rows="2" Cols="40"></TextArea></td>  
+   <td><TextArea name="director" Rows="2" Cols="40"></TextArea></td>
    </tr>
    <tr>
    <td style="text-align:right"><font size=2>花语：</font></td>   
@@ -72,7 +72,7 @@
    </tr>
    <tr>
    <td style="text-align:right"><font size=2>现价：</font></td>   
-   <td><input type=text name="director" SIZE=18></td>
+   <td><input type=text name="rating" SIZE=18></td>
    </tr>
    <tr>
    <td style="text-align:right"><font size=2>最小图片：</font></td>
@@ -91,7 +91,7 @@
    <td><input type="file" name="pictured" size="24"> </td>
    </tr>
    <tr>
-   <td style="text-align:right"><font size=2>材料图片：</font></td>
+   <td style="text-align:right"><font size=2>主演图片：</font></td>
    <td><input type="file" name="staringpicture" size="24"> </td>
    </tr>
    <tr>
