--- a/src/main/resources/templates/movieindex.html
+++ b/src/main/resources/templates/movieindex.html
@@ -28,7 +28,7 @@
 				</td>
 				<td valign="middle" bgcolor="#FFFFFF" th:text="${movie.moviename}"></td>
 				<td valign="middle" bgcolor="#FFFFFF" th:text="${movie.price}"></td>
-				<td valign="middle" bgcolor="#FFFFFF" th:text="${movie.director}"></td>
+				<td valign="middle" bgcolor="#FFFFFF" th:text="${movie.rating}"></td>
 				<td valign="middle" bgcolor="#FFFFFF" th:text="${movie.sellednum}"></td>
 				<td valign="middle"  align="center"  bgcolor="#FFFFFF">
 				<a th:href="@{/admin/movieupdate(movieid=${movie.movieid})}">修改</a>
