--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,9 +14,9 @@
         注册新用户--填写注册信息，输入用户名和密码!</td></tr>
       <tr>
         <td style="text-align:right;width:150px;height:30px;">E-mail地址：</td>
-        <td align=left style="width:180px;"><input type=text name="email" value="a@163.com"></td>
+        <td align=left style="width:180px;"><input type=text name="username" value="a@163.com"></td>
         <td align=left>
-          <span id="email_msg"></span></td>
+          <span id="username_msg"></span></td>
       </tr>
       <tr>
         <td style="text-align:right;width:150px;height:30px;">密码：</td>
