--- a/src/main/resources/templates/showcart.html
+++ b/src/main/resources/templates/showcart.html
@@ -34,7 +34,7 @@
 </td>
 
 <td th:text="${cart.price}">202</td>
-<td th:text="${cart.director}">178<td>
+<td th:text="${cart.rating}">178<td>
  
   
  <input type="button" value="-" th:onclick="change(this, -1,[[${cart.cartId}]]);"/>
